[package]
name = "eql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.29.2"
chrono = { version = "0.4.19", features = ["serde"] }
tokio = { version = "1.14", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }